# 42_content

./: .gitignore  README.md
libft/: CMakeLists.txt  main.c
libft/ft_libc/: ft_bzero.c  ft_bzero.h  ft_isalnum.c  ft_isalnum.h  ft_isalpha.c  ft_isalpha.h  ft_isascii.c  ft_isascii.h  ft_isdigit.c  ft_isdigit.h  ft_isprint.c  ft_isprint.h  ft_memcpy.c  ft_memcpy.h  ft_memmove.c  ft_memmove.h  ft_memset.c  ft_memset.h  ft_strlcpy.c  ft_strlcpy.h  ft_strlen.c  ft_strlen.h  libft.h
